feat(api): implement client app repository, anon auth service, and basic auth controller
